--- a/en/a/adjustment.4313.wikitext
+++ b/en/a/adjustment.4313.wikitext
@@ -41,7 +41,7 @@
 * Finnish: {{t+|fi|säätö}}, {{t|fi|hienosäätö}}
 * French: {{t+|fr|ajustement|m}}, {{t|fr|arèglement|m}}
 * German: {{t+|de|Anpassung|f}}, {{t+|de|Regulierung|f}}
-* Greek: {{t+|el|διευθέτηση|tr=diefθétisi|f}}, {{t+|el|ρύθμιση|tr=ríiθmisi|f}}, {{t+|el|προσαρμογή|tr=prosarmogí|f}}, {{t|el|διαβάθμηση|tr=diaváθmisi|f}}
+* Greek: {{t+|el|διευθέτηση|f}}, {{t+|el|ρύθμιση|f}}, {{t+|el|προσαρμογή|f}}, {{t|el|διαβάθμηση|f}}
 * Guaraní: {{t-needed|gn}}
 * Hebrew: {{t+|he|כִּוּוּן|m}}
 * Hungarian: {{t+|hu|beállítás}}
@@ -56,7 +56,7 @@
 * Polish: {{t+|pl|ustawienie|n}}, {{t|pl|regulacja|f}}
 * Portuguese: {{t|pt|ajustamento|m}}, {{t+|pt|ajuste|m}}
 * Romanian: {{t+|ro|ajustare|f}}, {{t+|ro|acomodare|f}}
-* Russian: {{t+|ru|приспосабливание|tr=prisposáblivanije|sc=Cyrl}}, {{t+|ru|регулировка|f|tr=reguliróvka|sc=Cyrl}}, {{t+|ru|настройка|f|tr=nastrójka|sc=Cyrl}}, {{t+|ru|юстировка|f|tr=justiróvka}}
+* Russian: {{t+|ru|приспоса́бливание|sc=Cyrl}}, {{t+|ru|регулиро́вка|f|sc=Cyrl}}, {{t+|ru|настро́йка|f|sc=Cyrl}}, {{t+|ru|юстиро́вка|f}}
 * Slovak: {{t|sk|prispôsobenie|n}}, {{t|sk|úprava|f}}
 * Slovene: {{t|sl|popravek|m}}
 * Spanish: {{t+|es|ajuste|m}}, {{t+|es|modificación|f}}
@@ -68,7 +68,7 @@
 {{trans-bottom}}
 
 {{trans-top|(psychology) The behavioural process of balancing conflicting needs, or needs against obstacles in the environment}}
-* Russian: {{t+|ru|адаптация|f|tr=adaptácija}}
+* Russian: {{t+|ru|адапта́ция|f}}
 {{trans-mid}}
 {{trans-bottom}}
 
