--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -15,39 +15,29 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 ===Preposition===
 {{en-prep}}
 
-# [[in|In]] or very [[near]] a particular [[place]].
-#* {{RQ:Schuster Hepaticae V|4}}
-#*: (''b'')  sporophyte with foot reduced, the entire sporophyte enveloped by the calyptra, which is ± stipitate '''at''' the base.
-#: '''''At''' that precise position, '''at''' Jim’s house.''
-# {{qualifier|indicating time}} [[simultaneous|Simultaneous]], [[during]].
-#* {{quote-news|year=2012
-|date=April 19
-|author=Josh Halliday
-|title=Free speech haven or lawless cesspool – can the internet be civilised?
-|work=the Guardian
-|url=http://www.guardian.co.uk/technology/2012/apr/19/free-speech-haven-lawless-cesspool
-|page=
+#[[in|In]] or very [[near]] a particular [[place]].
+#:{{ux|en|'''at''' that precise position;&emsp; '''at''' Jim’s house}}
+#*{{RQ:Schuster Hepaticae V|4}}
+#*:(''b'') sporophyte with foot reduced, the entire sporophyte enveloped by the calyptra, which is ± stipitate '''at''' the base.
+#{{qualifier|indicating time}} [[simultaneous|Simultaneous]], [[during]].
+#:{{ux|en|'''at''' six o’clock;&emsp; '''at''' closing time;&emsp; '''at''' night.}}
+#*{{quote-news|year=2012|date=April 19|author=Josh Halliday|work=the Guardian
+|title=[http://www.guardian.co.uk/technology/2012/apr/19/free-speech-haven-lawless-cesspool Free speech haven or lawless cesspool – can the internet be civilised?]
 |passage=Other global taboos, such as sex and suicide, manifest themselves widely online, with websites offering suicide guides and Hot XXX Action seconds away '''at''' the click of a button. The UK government will come under pressure to block access to pornographic websites this year when a committee of MPs publishes its report on protecting children online.}}
-#: '''''At''' six o’clock, '''at''' closing time, '''at''' night.''
-# In the [[direction]] of (often in an unfocused or uncaring manner).
-#: ''He threw the ball '''at''' me, he shouted '''at''' her.''
-# [[occupy|Occupied]] in (activity).
-#: ''Men '''at''' work.''
-# {{non-gloss definition|Indicates a position on a scale or in a series.}}
-#: ''Sell '''at''' 90.''
-#: ''Tiger finished the round '''at''' tenth, seven strokes behind the leaders.''
-#: ''I'm offering it - just to select customers - '''at''' cost.''
-# Because of.
-#: ''Laugh '''at''' a joke.''
-# Holding a given [[speed]] or [[rate#English|rate]].
-#: ''It is growing '''at''' the rate of 3% a year.''
-#: ''Cruising along '''at''' fifty miles per hour.''
-# In a state of.
-#: ''She is [[at sixes and sevens|'''at''' sixes and sevens]] with him.''
-#: ''They are [[at loggerheads|'''at''' loggerheads]] over how best to tackle the fiscal cliff.''
-#: ''The city was [[at the mercy of|'''at''' the mercy of]] the occupying forces.''
-# {{label|en|Ireland|stressed pronunciation}} bothering, irritating, causing discomfort to
-#*'''1995''' Keith Wood, quoted in David Hughes, "[http://www.independent.co.uk/sport/rugby-union-wood-oddson-to-take-one-against-the-head-1568622.html Wood odds-on to take one against the head]", in ''The Independent'' (London) 18 January 1995:
+#In the [[direction]] of (often in an unfocused or uncaring manner).
+#:{{ux|en|He threw the ball '''at''' me.&emsp; He shouted '''at''' her.}}
+#[[occupy|Occupied]] in (activity).
+#:{{ux|en|men '''at''' work}}
+#{{non-gloss definition|Indicates a position on a scale or in a series.}}
+#:{{ux|en|Sell '''at''' 90.&emsp; {{nowrap|Tiger finished the round '''at''' tenth, seven strokes behind the leaders.}}&emsp; {{nowrap|I'm offering it&mdash;just to select customers&mdash;'''at''' cost.}}}}
+#Because of.
+#:{{ux|en|to laugh '''at''' a joke}}
+#Holding a given [[speed]] or [[rate#English|rate]].
+#:{{ux|en|It is growing '''at''' the rate of 3% a year.&emsp; {{nowrap|Cruising along '''at''' fifty miles per hour.}}}}
+#In a state of.
+#:{{ux|en|She is [[at sixes and sevens|'''at''' sixes and sevens]] with him.&emsp; {{nowrap|They are [[at loggerheads|'''at''' loggerheads]] over how best to tackle the fiscal cliff.}}&emsp; {{nowrap|The city was [[at the mercy of|'''at''' the mercy of]] the occupying forces.}}}}
+#{{lb|en|Ireland|stressed pronunciation}} bothering, irritating, causing discomfort to
+#*'''1995''' Keith Wood, quoted in David Hughes, "[http://www.independent.co.uk/sport/rugby-union-wood-oddson-to-take-one-against-the-head-1568622.html Wood odds-on to take one against the head]", in ''The Independent'' (London) 18 January:
 #*:I think `Jesus, my back is '''at''' me'. Then I get the ball. Off you go for 10 yards and you don't feel a thing. Then you stop and think: `Jesus, it's '''at''' me again'[.]
 #*'''2014''' Marian Keyes "[http://www.mariankeyes.com/newsletter/January2014-2?forumboardid=26&forumtopicid=26 Antarctic Diary - Part 2]" personal website (January 2014):
 #*:He seems to be saying. “Ah, go on, you’re making the other lads feel bad.” But the 4th fella says, “No. Don’t be '''‘at’''' me. I’m just not in the form right now, I’ll stay where I am, thanks.” 
