--- a/en/c/chin.7352.wikitext
+++ b/en/c/chin.7352.wikitext
@@ -212,6 +212,7 @@ From {{etyl|enm|en}} {{term|chin|lang=enm}}, from {{etyl|ang|en}} {{m|ang|ċinn|
 * Spanish: {{t+|es|barbilla|f}}, {{t+|es|mentón|m}}, {{t+|es|pera|f}}
 * Sranan Tongo: {{t|srn|kowru}}
 * Sumerian: {{t|sux|te}}, {{t|sux|de4}}, {{t|sux|sun4}}, {{t|sux|sum4}}, {{t|sux|sùl}}, {{t|sux|su6}}
+* Sundanese: {{t+|su|angkeut}}
 * Swahili: {{t|sw|tawa}}, {{t+|sw|kidevu}}
 * Swedish: {{t+|sv|haka|c}}
 * Tabasaran: {{t|tab|ккалккам|sc=Cyrl}}, {{t|tab|чене|sc=Cyrl}}
