[[lv:weight]] <weight#31962732>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -339,6 +339,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 [[sw:weight]]
 [[ku:weight]]
 [[lo:weight]]
+[[lv:weight]]
 [[lt:weight]]
 [[li:weight]]
 [[hu:weight]]
