--- a/en/a/again.4310.wikitext
+++ b/en/a/again.4310.wikitext
@@ -89,19 +89,19 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Arabic: {{t|ar|مرة أخرى|f|tr=márra(tan) ʾúxrā}}, {{t|ar|كرة أخرى|f|tr=kárra(tan) ʾúxrā}} {{qualifier|adverbial accusative used}}, {{t|ar|ثانيةً|tr=ṯāniyatan|sc=Arab}}
 *: Egyptian Arabic: {{t|arz|تاني|tr=tani|sc=Arab}}, {{t|arz|كمان|tr=kaman - kman|sc=Arab}}
 * Aragonese: {{t-needed|an}}
-* Armenian: {{t|hy|էլի|tr=ēli}}, {{t|hy|կրկին|tr=krkin}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից|tr=noric’}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն|tr=noren}}
+* Armenian: {{t|hy|էլի}}, {{t|hy|կրկին}}, {{qualifier|Eastern-Armenian}} {{t|hy|նորից}}, {{qualifier|Western-Armenian}} {{t|hy|նորեն}}
 * Asturian: {{t|ast|otra vez}}, {{t|ast|otra vegada}}, {{t|ast|de nuevo}}
 * Avar: {{t|av|жеги}}
 * Azeri: {{t-needed|az}}
-* Bashkir: {{t|ba|тағы ла|tr=tağï la|sc=Cyrl}}, {{t|ba|тағы берҙе|tr=tağï berðe|sc=Cyrl}}
+* Bashkir: {{t|ba|тағы ла|sc=Cyrl}}, {{t|ba|тағы берҙе|sc=Cyrl}}
 * Basque: {{t|eu|berriro}}
-* Belarusian: {{t|be|зноў|tr=znoŭ|sc=Cyrl}}, {{t|be|яшчэ раз|tr=jaščé raz|sc=Cyrl}}
+* Belarusian: {{t|be|зноў|sc=Cyrl}}, {{t|be|яшчэ́ раз|sc=Cyrl}}
 * Bengali: {{t|bn|আবার|tr=abar|sc=Beng}}
 * Berber:
 *: Tashelhit: {{t|shi|dax}}
 * Breton: {{t+|br|adarre}}
-* Bulgarian: {{t+|bg|отново|tr=otnovo}}, {{t+|bg|пак|tr=pak}}, {{t+|bg|отново|tr=otnovo|sc=Cyrl}}, {{t+|bg|пак|tr=pak|sc=Cyrl}}
-* Burmese: {{t|my|နောက်တဖန်|sc=Mymr|tr=nauktăhpan}}, {{t+|my|ထပ်|tr=htat|sc=Mymr}}
+* Bulgarian: {{t+|bg|отново}}, {{t+|bg|пак}}, {{t+|bg|отново|sc=Cyrl}}, {{t+|bg|пак|sc=Cyrl}}
+* Burmese: {{t|my|နောက်တဖန်|sc=Mymr}}, {{t+|my|ထပ်|sc=Mymr}}
 * Catalan: {{t|ca|una altra vegada}}, {{t|ca|de nou}}
 * Cherokee: {{t|chr|ᎠᏏᏇ|tr=asique|sc=Cher}}
 * Chinese:
@@ -116,9 +116,9 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Finnish: {{t+|fi|taas}}, {{t+|fi|uudelleen}}, {{t+|fi|jälleen}}, {{t|fi|toistamiseen}}, {{t|fi|vielä kerran}}
 * French: {{t+|fr|de nouveau}}, {{t+|fr|encore}}
 * Galician: {{t|gl|outra vez}}, {{t|gl|de novo}}
-* Georgian: {{t|ka|ხელახლა|tr=xelaxla|sc=Geor}}, {{t|ka|კვლავ|tr=kvlav|sc=Geor}}, {{t|ka|ისევ|tr=isev|sc=Geor}}
+* Georgian: {{t|ka|ხელახლა|sc=Geor}}, {{t|ka|კვლავ|sc=Geor}}, {{t|ka|ისევ|sc=Geor}}
 * German: {{t+|de|erneut}}, {{t|de|noch einmal}}, {{t+|de|nochmal}}, {{t|de|schon wieder}}, {{t+|de|wieder}}
-* Greek: {{t+|el|ξανά|tr=xaná}}, {{t+|el|πάλι|tr=páli}}
+* Greek: {{t+|el|ξανά}}, {{t+|el|πάλι}}
 * Hawaiian: {{t|haw|hou}}
 * Hebrew: {{t|he|שוב|tr=šuv}}
 * Hindi: {{t|hi|फिर|tr=phir}}, {{t|hi|फिर से|tr=phir se|sc=Deva}}, {{t|hi|दुबारा|tr=dubārā|sc=Deva}}
@@ -140,12 +140,12 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Latin: {{t|la|denuo}}, {{t|la|iterum}}
 * Latvian: {{t|lv|atkal}}
 * Lithuanian: {{t+|lt|vėl}}
-* Macedonian: {{t|mk|пак|tr=pak|sc=Cyrl}}, {{t|mk|повторно|tr=povtorno|sc=Cyrl}}
+* Macedonian: {{t|mk|пак|sc=Cyrl}}, {{t|mk|повторно|sc=Cyrl}}
 * Malay: {{t+|ms|lagi}}
 * Malayalam: {{t+|ml|വീണ്ടും|sc=Mlym}}
 * Maltese: {{t|mt|darb' oħra}}
 * Maori: {{t|mi|anō}}
-* Mongolian: {{t|mn|дахин|tr=dahin|sc=Cyrl}}
+* Mongolian: {{t|mn|дахин|sc=Cyrl}}
 * Nahuatl: {{t|nah|occeppa}}
 * Navajo: {{t|nv|nááná}}
 * Norwegian: {{t+|no|igjen}}
@@ -156,7 +156,7 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Portuguese: {{t+|pt|de novo}}, {{t|pt|outra vez}}, {{t+|pt|novamente}}
 * Romanian: {{t+|ro|iarăși}}, {{t|ro|din nou}}
 * Romansch: {{t|rm|danovamain}} {{qualifier|Rumantsch Grischun, Sursilvan}}, {{t|rm|daniev}} {{qualifier|Sursilvan}}, {{t|rm|danovmeing}}, {{t|rm|danievmeing}} {{qualifier|Sutsilvan}}, {{t|rm|danovamaintg}} {{qualifier|Surmiran}}, {{t|rm|danövmaing}}, {{t|rm|danöv}} {{qualifier|Puter, Vallader}}, {{t|rm|puspè}} {{qualifier|Rumantsch Grischun}}, {{t|rm|puspei}} {{qualifier|Sursilvan}}, {{t|rm|puspe}} {{qualifier|Sutsilvan, Surmiran}}, {{t|rm|darcho}} {{qualifier|Puter}}, {{t|rm|darcheu}} {{qualifier|Vallader}}
-* Russian: {{t+|ru|опять|tr=opját’}}, {{t+|ru|снова|tr=snóva}}, {{t|ru|ещё раз|tr=ješčó raz|sc=Cyrl}}
+* Russian: {{t+|ru|опя́ть}}, {{t+|ru|сно́ва}}, {{t|ru|ещё раз|sc=Cyrl}}
 * Sanskrit: {{t|sa|पुनः|tr=punaḥ|sc=Deva}}
 * Scottish Gaelic: {{t|gd|a-rithist}}, {{t|gd|às ùr}}
 * Serbo-Croatian:
@@ -170,11 +170,11 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Spanish: {{t|es|otra vez}}, {{t+|es|de nuevo}}, {{t+|es|nuevamente}}
 * Swedish: {{t+|sv|igen}}, {{t+|sv|ånyo}}, {{t+|sv|åter}}, {{t+|sv|på nytt}}, {{t+|sv|å nyo}}
 * Tagalog: {{t|tl|muli}}, {{t|tl|nanaman}}, {{t|tl|ulit}}
-* Telugu: {{t+|te|మళ్లీ|tr=maḷlī}}, {{t|te|మరలా|tr=maralā}}
+* Telugu: {{t+|te|మళ్లీ}}, {{t|te|మరలా}}
 * Thai: {{t+|th|อีก|tr=èek}}, {{t+|th|ใหม่|tr=mài}}
 * Tok Pisin: {{t|tpi|gen}}
 * Turkish: {{t+|tr|yeniden}}, {{t+|tr|tekrar}}, {{t+|tr|gene}}, {{t+|tr|yine}}, {{t+|tr|bir daha}}
-* Ukrainian: {{t|uk|знову|tr=znóvu|sc=Cyrl}}, {{t|uk|знов|tr=znov|sc=Cyrl}}, {{t|uk|ще раз|tr=šče raz|sc=Cyrl}}
+* Ukrainian: {{t|uk|зно́ву|sc=Cyrl}}, {{t|uk|знов|sc=Cyrl}}, {{t|uk|ще раз|sc=Cyrl}}
 * Urdu: {{t|ur|پھر|tr=phir|sc=ur-Arab}}, {{t|ur|پھر سے|tr=phir se|sc=ur-Arab}}, {{t+|ur|دوبارہ|tr=dubārā|sc=ur-Arab}}
 * Vietnamese: {{t+|vi|lại}}
 * Welsh: {{t|cy|eto}}
@@ -190,13 +190,13 @@ From {{etyl|enm|en}} {{term|again|lang=enm}}, {{term|ayain|lang=enm}}, {{term|an
 * Finnish: {{t+|fi|taas}}
 * French: {{t+|fr|déjà}}
 * German: {{t+|de|nochmal}}
-* Greek: {{t+|el|ξανά|tr=xaná}}, {{t+|el|πάλι|tr=páli}}
+* Greek: {{t+|el|ξανά}}, {{t+|el|πάλι}}
 * Hungarian: {{t+|hu|is}}
 {{trans-mid}}
 * Japanese: {{t+|ja|っけ|tr=kke}}
 * Korean: {{t|ko|ㅆ지|sc=Kore}}, {{t|ko|ㅆ죠|sc=Kore}}
 * Portuguese: {{t+|pt|mesmo}}
-* Russian: {{t|ru|говорите|tr=govorít'e}}
+* Russian: {{t|ru|говори́те}}
 * Spanish: {{t+|es|de nuevo}}
 * Swedish: {{t+|sv|igen}}
 * Tagalog: {{t+|tl|ano}}?, ano {{t|tl|ulit}}? ano {{t+|tl|po}}? (formal)
