/* Conjunction */ Quote added <though#31988012>

--- a/en/t/though.7361.wikitext
+++ b/en/t/though.7361.wikitext
@@ -66,6 +66,8 @@ From {{etyl|enm|en}} {{term|thaugh|lang=enm}}, {{term|thagh||lang=enm}}, from {{
 
 #Despite the fact that; [[although]].
 #:{{ux|en|'''Though''' it’s risky, it’s worth taking the chance.}}
+#*{{RQ:RJfrs AmtrPqr|II|071}}
+#*:Orion hit a rabbit once; but '''though''' sore wounded it got to the bury, and, struggling in, the arrow caught the side of the hole and was drawn out. Indeed, a nail filed sharp is not of much avail as an arrowhead; you must have it barbed, and that was a little beyond our skill.
 #{{lb|en|archaic}} [[if|If]], [[that]], [[even if]].
 #:{{ux|en|We shall be not sorry '''though''' the man die tonight.}}
 #* '''1945''', {{w|Oscar Hammerstein II}}, “[[w:You'll Never Walk Alone (song)|You’ll Never Walk Alone]]” (song), in [[w:Rodgers and Hammerstein|Richard Rodgers and Oscar Hammerstein II]], ''[[w:Carousel (musical)|Carousel]]'' (musical)
