t+lv:[[svilpe]] ([[WT:EDIT|Assisted]]) <whistle#31998644>

--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -70,7 +70,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Italian: {{t+|it|fischietto|m}}
 * Japanese: {{t+|ja|笛|tr=[[ふえ]], fue}}, {{t|ja|ホイッスル|tr=hoissuru}}, {{t|ja|口笛|tr=くちぶえ, kuchibue}}
 * Khmer: {{t+|km|កញ្ចែ|tr=kanh jeh|sc=Khmr}}
-* Latvian: {{t|lv|svilpe|f}}
+* Latvian: {{t|lv|svilpe|f}}, {{t|lv|svilpe|f}}
 * Luxembourgish: {{t+|lb|Päif|f}}
 * Malay: {{t|ms|wisel}}
 * Maltese: {{t|mt|suffara|f}}
