def: {{alternative spelling of|burka|lang=en}} ([[WT:EDIT|Assisted]]) <burqa#32005199>

--- a/en/b/burqa.803246.wikitext
+++ b/en/b/burqa.803246.wikitext
@@ -3,7 +3,7 @@
 ===Noun===
 {{en-noun}}
 
-# {{alternative form of|burka|lang=en}}
+# {{alternative spelling of|burka|lang=en}}
 
 ====Translations====
 {{trans-see|burka}}
