--- a/en/m/marten.8230.wikitext
+++ b/en/m/marten.8230.wikitext
@@ -1,6 +1,5 @@
 {{also|Marten|Mårten}}
 ==English==
-{{rfi}}
 {{wikipedia}}
 {{wikispecies|Martes}}
 
@@ -17,7 +16,7 @@ From {{etyl|enm|en}} {{m|enm|martren}}, {{m|enm|martryn}}, from {{etyl|xno|en}} 
 
 ====Noun====
 {{en-noun}}
-
+[[File:Martes martes-549-01 (UR1).jpg|thumb|Taxidermied european pine marten.]]
 # Any carnivorous mammal of the genus ''[[Martes]]'' in the family ''[[Mustelidae]]''.
 
 =====Derived terms=====
