t+pt:[[inextinguível]] ([[WT:EDIT|Assisted]]) <inextinguishable#32009285>

--- a/en/i/inextinguishable.742115.wikitext
+++ b/en/i/inextinguishable.742115.wikitext
@@ -9,6 +9,7 @@
 {{trans-top|incapable of being extinguished}}
 * Italian: {{t|it|inestinguibile}}
 {{trans-mid}}
+* Portuguese: {{t|pt|inextinguível}}
 {{trans-bottom}}
 
 [[et:inextinguishable]]
