--- a/en/a/at.3964.wikitext
+++ b/en/a/at.3964.wikitext
@@ -194,10 +194,11 @@ From {{etyl|enm|en}} {{m|enm|at}}, from {{etyl|ang|en}} {{m|ang|æt||at, near, b
 * Italian: {{t+|it|a}}
 * Japanese: {{t+|ja|に|tr=...ni|alt=...に|sc=Jpan}}, {{t+|ja|を|tr=...o|alt=...を|sc=Jpan}}
 * Korean: {{t+|ko|에게|tr=...ege|alt=...에게|sc=Kore}}
-{{trans-mid}}
 * Kurdish:
 *: Kurmanji: {{t+|kmr|li}}
 *: Sorani: ([[le]])
+{{trans-mid}}
+* Lao: {{t-needed|lo}}
 * Latin: {{t+|la|ad}}
 * Macedonian: {{t|mk|во}}, {{t|mk|на}}
 * Norwegian: {{t+|no|på}}
