--- a/en/f/FOIL.26230.wikitext
+++ b/en/f/FOIL.26230.wikitext
@@ -3,7 +3,7 @@
 [[Image:MonkeyFaceFOILRule.JPG|thumb|Multiplying two binomials using the FOIL method]]
 
 ===Etymology===
-{{acronym-old|en}} of {{term|first|lang=en}} {{term|outer|lang=en}} {{term|inner|lang=en}} {{term|last|lang=en}} or similar.
+{{acronym of|[[first]] {{term|outer|lang=en}} {{term|inner|lang=en}} {{term|last|lang=en}}}} or similar.
 
 ===Proper noun===
 {{en-proper noun}}
