--- a/en/1/1 Samuel.801687.wikitext
+++ b/en/1/1 Samuel.801687.wikitext
@@ -16,7 +16,7 @@
 * Chinese:
 *: Cantonese: {{t|yue|撒母耳記上|sc=Hani}}, {{t|yue|撒母耳记上|tr=saat3 mou5 ji5 gei3 soeng6|sc=Hani}}, {{t|yue|撒慕爾紀上|sc=Hani}}, {{t|yue|撒慕尔纪上|tr=saat3 mou6 ji5 gei2 soeng6|sc=Hani}} {{qualifier|Catholic}}
 *: Mandarin: {{t+|cmn|撒母耳記上|sc=Hani}}, {{t+|cmn|撒母耳记上|tr=Sǎmǔ'ěrjì Shàng|sc=Hani}}, {{t|cmn|撒慕爾紀上|sc=Hani}}, {{t|cmn|撒慕尔纪上|tr=Sǎmù'ěrjì Shàng|sc=Hani}} {{qualifier|Catholic}}
-*: Min Nan: {{t|nan|撒母耳記上卷|sc=Hani}}, {{t|nan|撒母耳记上卷|tr=Sat-bó͘-ní Kì Siōng-koàn, Sat-bó͘-jí Kì Siōng-koàn|sc=Hani}}, {{t|nan|撒母耳記上|sc=Hani}}, {{t|nan|撒母耳记上|tr=Sat-bó͘-ní Kì Siōng, Sat-bó͘-jí Kì Siōng|sc=Hani}}
+*: Min Nan: {{t|nan|撒母耳記上卷|sc=Hani}}, {{t|nan|撒母耳记上卷|tr=Sat-bó͘-ní Kì Siōng-koàn, Sat-bó͘-jí Kì Siōng-koàn|sc=Hani}}, {{t|nan|撒母耳記上|sc=Hani}}, {{t|nan|撒母耳记上|tr=Sat-bó͘-ní Kì Siōng, Sat-bó͘-jí Kì Siōng|sc=Hani}}, {{t|nan|撒慕爾紀上}}, {{t|nan|撒慕尔纪上|tr=Sat-bō͘-ní-kí siōng}} {{qualifier|Catholic}}
 * German: {{t|de|1 Samuel}}
 * Greek: {{t|el|Α' Σαμουήλ}}
 {{trans-mid}}
