t+pt:[[obrigado]] t+pt:[[limite]] t+pt:[[divisa]] t+pt:[[limitar]] t+pt:[[salto]] t+pt:[[saltar]] ([[WT:EDIT|Assisted]]) <bound#32061204>

--- a/en/b/bound.6799.wikitext
+++ b/en/b/bound.6799.wikitext
@@ -55,6 +55,7 @@ See [[bind]]
 * French: {{t+|fr|obligé}}, {{t+|fr|tenu}}
 {{trans-mid}}
 * Italian: {{t|it|obbligato|m}}, {{t+|it|confinato|m}}, {{t|it|tenuto|m}}, {{t|it|costretto}}, {{t+|it|portato}}
+* Portuguese: {{t+|pt|obrigado}}
 * Romanian: {{t+|ro|obligat|m}}
 * Russian: {{t+|ru|обязанный|tr=objazánnyj|sc=Cyrl}}, {{t+|ru|должный|tr=dólzhnyj|sc=Cyrl}}
 {{trans-bottom}}
@@ -105,6 +106,7 @@ From {{etyl|enm|en}} {{term|bounde|lang=en}}, from {{etyl|fro|en}} {{term|bunne|
 {{trans-mid}}
 * Italian: {{t+|it|frontiera|f}}, {{t+|it|confine|m}}
 * Polish: {{t+|pl|granica|f}}
+* Portuguese: {{t+|pt|limite|m}}, {{t+|pt|divisa|f}}
 * Russian: {{t+|ru|граница|f|tr=graníca|sc=Cyrl}}, {{t+|ru|предел|m|tr=predél|sc=Cyrl}}, {{t+|ru|рубеж|m|tr=rubéž|sc=Cyrl}}
 * Spanish: {{t+|es|límite}}
 * Swedish: {{t+|sv|gräns|c}}
@@ -154,6 +156,7 @@ From {{etyl|enm|en}} {{term|bounde|lang=en}}, from {{etyl|fro|en}} {{term|bunne|
 {{trans-mid}}
 * German: {{t+|de|begrenzen}}, {{t|de|umgrenzen}}
 * Italian: {{t+|it|confinare}}, {{t+|it|accerchiare}}, {{t|it|delimitare}}
+* Portuguese: {{t+|pt|limitar}}
 * Russian: {{t+|ru|ограничивать|tr=ograníčivatʹ|sc=Cyrl}}
 * Spanish: {{t+|es|limitar}}
 * Swedish: {{t|sv|gränsa till}}
@@ -190,6 +193,7 @@ From {{etyl|fr|en}} {{term|bondir||to leap, bound, originally make a loud resoun
 {{trans-mid}}
 * Greek: {{t+|el|άλμα|n}}
 * Italian: {{t+|it|salto|m}}, {{t|it|balzo|m}}
+* Portuguese: {{t+|pt|salto|m}}
 * Russian: {{t+|ru|прыжок|m|tr=pryžók|sc=Cyrl}}, {{t+|ru|скачок|m|tr=skačók|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|leum|m}}
 * Swedish: {{t+|sv|hopp|n}}, {{t+|sv|skutt|n}}
@@ -219,6 +223,7 @@ From {{etyl|fr|en}} {{term|bondir||to leap, bound, originally make a loud resoun
 * French: {{t+|fr|bondir}}, {{t+|fr|sauter}}
 {{trans-mid}}
 * Italian: {{t|it|balzare}}
+* Portuguese: {{t+|pt|saltar}}
 * Russian: {{t+|ru|прыгать|tr=prýgatʹ|sc=Cyrl}}, {{t+|ru|скакать|tr=skakátʹ|sc=Cyrl}}
 * Scottish Gaelic: {{t|gd|leum}}
 * Swedish: {{t+|sv|skutta}}
