t+pt:[[quadrante]] ([[WT:EDIT|Assisted]]) <quadrant#32063851>

--- a/en/q/quadrant.4317.wikitext
+++ b/en/q/quadrant.4317.wikitext
@@ -27,6 +27,7 @@ From {{etyl|la|en}} {{term|quadrantem|lang=la}}, accusative singular of {{term|q
 {{trans-mid}}
 * French: {{t+|fr|quadrant|m}}
 * Norwegian: {{t|no|kvadrant|m}}
+* Portuguese: {{t+|pt|quadrante|m}}
 * Russian: {{t+|ru|квадрант|m|tr=kvadránt}}
 * Swedish: {{t|sv|kvadrant|c}}
 {{trans-bottom}}
@@ -43,6 +44,7 @@ From {{etyl|la|en}} {{term|quadrantem|lang=la}}, accusative singular of {{term|q
 * Japanese: {{t|ja|象限|tr=shōgen|sc=Jpan}}
 * Korean: {{t+|ko|사분면|sc=Kore}}
 * Norwegian: {{t|no|kvadrant|m}}
+* Portuguese: {{t+|pt|quadrante|m}}
 * Russian: {{t+|ru|квадрант|m|tr=kvadránt}}
 * Swedish: {{t|sv|kvadrant|c}}
 {{trans-bottom}}
@@ -54,6 +56,7 @@ From {{etyl|la|en}} {{term|quadrantem|lang=la}}, accusative singular of {{term|q
 * Finnish: {{t|fi|kvadrantti}}
 {{trans-mid}}
 * French: {{t+|fr|quadrant|m}}
+* Portuguese: {{t+|pt|quadrante|m}}
 * Russian: {{t+|ru|квадрант|m|tr=kvadránt}}
 * Swedish: {{t|sv|kvadrant|c}}
 {{trans-bottom}}
@@ -67,6 +70,7 @@ From {{etyl|la|en}} {{term|quadrantem|lang=la}}, accusative singular of {{term|q
 * French: {{t+|fr|quadrant|m}}
 * German: {{t+|de|Quadrant|m}}
 * Hungarian: {{t+|hu|kvadráns}}
+* Portuguese: {{t+|pt|quadrante|m}}
 * Russian: {{t+|ru|квадрант|m|tr=kvadránt}}
 {{trans-bottom}}
 
