--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -13,8 +13,9 @@
 
 # {{context|British|lang=en}} The {{l/en|equivalent}} title to {{l/en|Sir}} for a female {{l/en|knight}}.
 #: '''''Dame''' Edith Sitwell''
-# {{context|informal|slightly|derogatory|US|lang=en}} A woman.
-#: ''There ain't nothin' like a '''dame'''!''
+# {{context|dated|informal|slightly|derogatory|US|lang=en}} A woman.
+#* '''1949''', {{w|Oscar Hammerstein II}}, "{{w|There is Nothin' Like a Dame}}", ''[[w:South Pacific (musical)|South Pacific]]''
+#*: There ain't nothin' like a '''dame'''! / Nothin in the word! / There is nothin' you can name / That is anythin' like a '''dame'''!
 # A [[traditional]] [[character]] in [[British]] [[pantomime]], a [[melodramatic]] [[female]] often played by a man in [[drag]].
 # {{context|archaic|lang=en}} {{l/en|lady|Lady}}, woman.
 
