--- a/en/d/dame.26261.wikitext
+++ b/en/d/dame.26261.wikitext
@@ -15,7 +15,7 @@
 #: '''''Dame''' Edith Sitwell''
 # {{context|dated|informal|slightly|derogatory|US|lang=en}} A woman.
 #* '''1949''', {{w|Oscar Hammerstein II}}, "{{w|There is Nothin' Like a Dame}}", ''[[w:South Pacific (musical)|South Pacific]]''
-#*: There ain't nothin' like a '''dame'''! / Nothin in the word! / There is nothin' you can name / That is anythin' like a '''dame'''!
+#*: There ain't nothin' like a '''dame'''! / Nothin' in the world! / There is nothin' you can name / That is anythin' like a '''dame'''!
 # A [[traditional]] [[character]] in [[British]] [[pantomime]], a [[melodramatic]] [[female]] often played by a man in [[drag]].
 # {{context|archaic|lang=en}} {{l/en|lady|Lady}}, woman.
 
