--- a/en/s/sir.26262.wikitext
+++ b/en/s/sir.26262.wikitext
@@ -68,6 +68,7 @@ From {{etyl|enm|en}} {{term|sir|lang=enm}}, from {{etyl|fro|en}} {{term|sire||ma
 * Dutch: {{t+|nl|meneer|m}}, {{t+|nl|mijnheer|m}}
 * French: {{t+|fr|monsieur|m}}
 * Friulian: {{t|fur|siôr|m}}, {{t|fur|signôr|m}}, {{t|fur|missâr|m}}
+* Georgian: {{t|ka|ბატონო|sc=Geor}}
 * German: {{t+|de|Herr|m}}, [[mein Herr]] {{g|m}} {{gloss|my lord}}
 * Greek: {{t+|el|κύριος|m}}, [[κύριε]] {{g|m}} ([[vocative case]])
 * Hebrew: {{t|he|אדוני|tr=adoní|sc=Hebr}}
