t+ga:[[cailín bán]] ([[WT:EDIT|Assisted]]) <ermine#32086575>

--- a/en/e/ermine.8234.wikitext
+++ b/en/e/ermine.8234.wikitext
@@ -52,7 +52,7 @@ Note: The supposed derivation from {{etyl|ML.|-}} {{m|la|mūs}} {{term|Armenius|
 * Greek: {{t+|el|ερμίνα|f|tr=ermína}}
 * Hungarian: {{t+|hu|hermelin}}
 * Icelandic: {{t+|is|hreysiköttur}}
-* Irish: {{t|ga|easóg|f}}
+* Irish: {{t|ga|easóg|f}}, {{t|ga|cailín bán|m}}
 * Italian: {{t|it|ermellino|m}}
 * Japanese: {{t+|ja|食肉目|tr=okojo|sc=Jpan}}
 * Jèrriais: {{t|roa-jer|b'lette|f}}
