/* Translations */ http://www.duden.de/rechtschreibung/Schwein and http://www.duden.de/rechtschreibung/Fresssack http://www.duden.de/rechtschreibung/Polizist <pig#32102596>

--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -168,7 +168,10 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Friulian: {{t|fur|purcit|m}}
 * Galician: {{t+|gl|porco|m}}, {{t+|gl|cocho|m}}
 * Georgian: {{t+|ka|ღორი}}
-* German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t|de|Hausschwein|n}}
+* German: {{t+|de|Schwein|n}}, {{qualifier|domestic}} {{t|de|Hausschwein|n}},
+*: Regional German {{t+|de|Docke|f}}, {{t|de|Wutz|f}}
+*: Franconian {{t+|de|Mocke|f}}
+*: Swabian {{t+|de|Kosel|f}}
 * Greek: {{t+|el|γουρούνι|n}}
 *: Ancient Greek: {{t|grc|ὗς}}
 * Hawaiian: {{t|haw|puaʻa}}
@@ -301,6 +304,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Esperanto: {{t|eo|porko}}
 * Finnish: {{t+|fi|porsas}}, {{t+|fi|sika}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
+* German: {{t|de|Fresssack|m}}, {{t|de|Fress-Sack|m}}, {{t+|fr|Schwein|n}}, {{t|de|Vielfraß|m}}
 * Greek: {{t+|el|γουρούνι|n}}
 * Icelandic: {{t+|is|svín|n}}
 {{trans-mid}}
@@ -349,7 +353,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Dutch: {{t+|nl|varken|n}}
 * Finnish: {{t+|fi|sika}}, {{t+|fi|sottapytty}}
 * French: {{t+|fr|cochon|m}}, {{t+|fr|porc|m}}
-* German: {{t+|de|Schwein|n}}
+* German: {{t|de|Dreckschwein|n}}, {{t|de|Dreckspatz|m}}, {{t|de|Ferkel|n}}, {{t|de|Saubartel|m}} (regional), {{t|de|Schmierfink|m}}, {{t|de|Schmutzfink|m}}, {{t+|de|Schwein|n}}, {{t|de|Schweinigel|m}}, {{t|de|Wutz|m}} (regional)
 * Greek: {{t+|el|γουρούνι|n}}
 * Indonesian: {{t+|id|babi}}
 * Italian: {{t+|it|porco|m}}, {{t+|it|maiale|m}}
@@ -372,7 +376,9 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Czech: {{t+|cs|fízl|m}}
 * Dutch: {{t+|nl|flik|m}}, {{t+|nl|smeris|n}}, {{t|nl|wout}}, {{t+|nl|juut}}, {{t+|nl|kit|p}}, {{t+|nl|kankerlijer|m}}, {{t|nl|tiefushoer|f}}, {{t+|nl|hoer|m|f}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}} {{qualifier|verlan}}
-* German: {{t+|de|Bulle|m}}
+* German: {{t+|de|Bulle|m}}, {{t|de|Büttel|m}} (obsolescent), {{t|de|Greifer|m}}, {{t|de|Greiferin|f}}, {{t|de|Pig|m or n}}, {{t|de|Udel|m}} (regional)
+*: Austrian {{t+|de|Kiberer|m}}, {{t+|de|Kieberer|m}}
+*: Swiss German {{t+|de|Schugger|m}}
 * Greek: {{t+|el|γουρούνι|n}}
 {{trans-mid}}
 * Icelandic: {{t|is|löggusvín|n}}
