--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -376,7 +376,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 * Czech: {{t+|cs|fízl|m}}
 * Dutch: {{t+|nl|flik|m}}, {{t+|nl|smeris|n}}, {{t|nl|wout}}, {{t+|nl|juut}}, {{t+|nl|kit|p}}, {{t+|nl|kankerlijer|m}}, {{t|nl|tiefushoer|f}}, {{t+|nl|hoer|m|f}}
 * French: {{t+|fr|flic|m}}, {{t+|fr|keuf|m}} {{qualifier|verlan}}
-* German: {{t+|de|Bulle|m}}, {{t|de|Büttel|m}} (obsolescent), {{t|de|Greifer|m}}, {{t|de|Greiferin|f}}, {{t|de|Pig|m or n}}, {{t|de|Udel|m}} (regional)
+* German: {{t+|de|Bulle|m}}, {{t|de|Büttel|m}} (obsolescent), {{t|de|Greifer|m}}, {{t|de|Greiferin|f}}, {{t|de|Pig}}, {{t|de|Udel|m}} (regional)
 *: Austrian {{t+|de|Kiberer|m}}, {{t+|de|Kieberer|m}}
 *: Swiss German {{t+|de|Schugger|m}}
 * Greek: {{t+|el|γουρούνι|n}}
