--- a/en/w/whatever it takes.775539.wikitext
+++ b/en/w/whatever it takes.775539.wikitext
@@ -15,6 +15,7 @@
 * Italian: {{t|it|ad ogni costo}}
 * Portuguese: {{t|pt|custe o que custar}}
 {{trans-mid}}
+* Romanian: {{t|ro|a face orice este necesar}}
 * Russian: {{t+|ru|во что бы то ни стало|tr=vo štó by to ni stálo|sc=Cyrl}}
 * Spanish: {{t|es|todo lo que sea necesario}}, {{t|es|cueste lo que cueste}}
 {{trans-bottom}}
