added [[Category:en:Algae]] using [[Help:Gadget-HotCat|HotCat]] <limu#32120164>

--- a/en/l/limu.801596.wikitext
+++ b/en/l/limu.801596.wikitext
@@ -28,6 +28,7 @@ From {{etyl|haw|en}} {{term|limu|lang=haw}}, from {{etyl|poz-pep-pro|en}} {{m|po
 * [[Lumi#Finnish|Lumi]], [[lumi#Finnish|lumi]]
 
 [[Category:fi:Beverages]]
+[[Category:en:Algae]]
 
 ----
 
