--- a/en/c/consumption.34058.wikitext
+++ b/en/c/consumption.34058.wikitext
@@ -61,10 +61,11 @@ From {{etyl|fro|en}} {{term|consumpcion|lang=fro}}, from {{etyl|la|en}} {{term|c
 * Finnish: {{t+|fi|kulutus}}
 * French: {{t+|fr|consommation|f}}
 * German: {{t+|de|Verbrauch|m}}, {{t|de|Verbrauchswert|m}}, {{t+|de|Verzehr|m}}
-{{trans-mid}}
 * Greek: {{t+|el|κατανάλωση|f|tr=katanálosi|sc=Grek}}
+{{trans-mid}}
 * Italian: {{t+|it|consumo|m}}
 * Khmer: {{t|km|បម្រើបម្រាស់|tr=bom rer bom ras|sc=Khmr}}
+* Portuguese: {{t+|pt|consumo|m}}
 * Russian: {{t+|ru|потребление|n|tr=potreblénije}}, {{t+|ru|расход|m|tr=rasxód}}
 * Scottish Gaelic: {{t|gd|caitheamh|f}}
 * Spanish: {{t+|es|consumo|m}}
