--- a/en/a/abaco.4397.wikitext
+++ b/en/a/abaco.4397.wikitext
@@ -14,12 +14,14 @@
 From {{etyl|la|it}} {{term|abacus||counting board|lang=la}}, from {{etyl|grc|it}} {{term|ἄβαξ||board|lang=grc}}.
 
 ===Pronunciation===
-* {{IPA|/ˈabako/|lang=it}}
+* {{IPA|/ˈa.ba.ko/|[ˈa.ba.ko̞]|lang=it}}
+* {{hyphenation|à|ba|co|lang=it}}
 
 ===Noun===
 {{it-noun|m}}
 
 # [[abacus]], [[plinth]], [[multiplication-table]]
+
 ====Synonyms====
 * [[pallottoliere]]
 * [[tavola pitagorica]]
