--- a/en/a/American English.34094.wikitext
+++ b/en/a/American English.34094.wikitext
@@ -40,6 +40,7 @@
 * Norwegian: {{t|no|amerikansk-engelsk}}
 * Polish: [[amerykański]] [[angielski]]
 * Portuguese: {{t+|pt|inglês americano|m}}
+* Romanian: {{t|ro|engleza americana|f|f-p|alt=engleză americană}}
 * Russian: {{t|ru|американский английский|m|tr=amerikánskij anglíjskij}}
 * Spanish: {{t+|es|inglés estadounidense|m}}, {{t+|es|inglés americano|m}}
 * Swahili: {{t|sw|Kiingereza cha Kimarekani}}
