--- a/en/c/Cyzicene.802479.wikitext
+++ b/en/c/Cyzicene.802479.wikitext
@@ -1,12 +1,12 @@
 ==English==
 
 ===Etymology===
-Derived from {{etyl|la|en}} (architecture) ''[[cyzicenus]]'' by [[w:Vitruvius|Vitruvius]]; from the city of ''Cyzicus.''
+Derived from the {{etyl|la|en}} word ''[[cyzicenus]]'' used by [[w:Vitruvius|Vitruvius]]; from the city of ''Cyzicus.''
 
 ===Adjective===
 {{en-adj|-}}
 
-# {{context|architecture|lang=en}} An [[architectural]] term for a large hall, which faced the north, with a prospect towards the gardens; the windows of this hall opened down to the ground, so that the green verdure could be seen by those lying on the couches.
+# {{context|architecture|lang=en}} Of or pertaining to, or being, a large north-facing hall with a prospect towards the gardens; the windows of this hall opened down to the ground, so that the green verdure could be seen by those lying on the couches.
 # Of or pertaining to the people and place of Cyzicus (an ancient classical city).
 
 ===References===
