--- a/en/o/oomycete.801875.wikitext
+++ b/en/o/oomycete.801875.wikitext
@@ -6,4 +6,6 @@
 
 # {{context|biology|lang=en}} Any of a number of [[filamentous]] [[unicellular]] [[protist]]s of the class ''[[Oomycetes]]''; the [[water molds]]
 
+[[Category:en:Oomycetes]]
+
 [[pl:oomycete]]
