corrected Romanian entry <marmot#32132261>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -78,7 +78,7 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 * Occitan: {{t|oc|marmòta}}, {{t|oc|muret}}
 * Polish: {{t+|pl|świstak}}, {{t|pl|świszcz|m}}
 * Portuguese: {{t+|pt|marmota|f}}
-* Romanian: {{t+|ro|marmota}}
+* Romanian: {{t+|ro|marmotă|f}}
 * Romansch: {{t|rm|muntanella}}
 * Russian: {{t+|ru|сурок|m|tr=surók}}
 * Sami: [[murmel]], [[murmelealli]]
