--- a/en/r/rub salt in the wound.742296.wikitext
+++ b/en/r/rub salt in the wound.742296.wikitext
@@ -21,7 +21,7 @@ Derived from the stingingly painful sensation of table salt deliberately being r
 * [[twist the knife]]
 
 ====Translations====
-{{trans-top|to make an injury feel worse}}
+{{trans-top|to make an injury, physical or emotional, feel worse}}
 * Bengali: kata ghaye nuner chite
 * Chinese:
 *: Mandarin: {{t+|cmn|雪上加霜|tr=xuě shàng jiā shuāng|sc=Hani}}
