t+ro:[[greutate]] t-balance t+ro:[[îngreuna]] ([[WT:EDIT|Assisted]]) <weight#32139800>

--- a/en/w/weight.7355.wikitext
+++ b/en/w/weight.7355.wikitext
@@ -166,9 +166,10 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 
 {{trans-top|importance or influence}}
 * Finnish: {{t|fi|painoarvo}}, {{t+|fi|merkitys}}
-{{trans-mid}}
 * Latin: {{t|la|auctōritās|f}}
+{{trans-mid}}
 * Portuguese: {{t+|pt|peso|m}}
+* Romanian: {{t+|ro|greutate|f}}
 {{trans-bottom}}
 
 {{trans-top|weight for training muscles}}
@@ -183,7 +184,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 {{trans-mid}}
 * Persian: {{t+|fa|وزنه|tr=vazne|sc=fa-Arab}}
 * Portuguese: {{t+|pt|peso|m}}, {{t+|pt|haltere|m}}
-* Romanian: {{t+|ro|halteră}}, {{t|ro|haltere|f-p}}
+* Romanian: {{t+|ro|halteră}}, {{t|ro|haltere|f-p}}, {{t+|ro|greutate|f}}
 * Russian: {{t+|ru|блин|m|tr=blin}}, {{t+|ru|гиря|f|tr=gírja}} ''dumbbell'', {{t+|ru|гантель|f|tr=gantɛ́l’}} ''barbell''
 * Scots: {{t|sco|weicht}}
 * Spanish: {{t+|es|pesa|f}}
@@ -277,6 +278,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * German: {{t+|de|beschweren}}
 {{trans-mid}}
 * Italian: {{t|it|appesantire}}
+* Romanian: {{t+|ro|îngreuna}}
 * Swedish: {{t|sv|göra tyngre}}
 {{trans-bottom}}
 
@@ -284,6 +286,7 @@ From {{etyl|ang|en}} ''[[wiht]]'', ''ġewiht'', from {{etyl|gem-pro|en}} {{m|gem
 * Finnish: {{t|fi|kuormittaa}}, {{t|fi|raskauttaa}}
 * Italian: {{t+|it|gravare}}
 {{trans-mid}}
+* Romanian: {{t+|ro|îngreuna}}
 * Swedish: {{t+|sv|tynga}}
 {{trans-bottom}}
 
