--- a/en/c/cop.26062.wikitext
+++ b/en/c/cop.26062.wikitext
@@ -8,7 +8,7 @@
 * {{rhymes|ɑp|lang=en}}
 
 ===Etymology 1===
-From {{etyl|enm|en}} {{term|coppe|lang=enm}}, from {{etyl|ang|en}} {{m|*coppe|lang=ang}}, as in {{term|ātorcoppe||spider|lit=venom head|lang=ang}}, from {{etyl|ang|en}} {{term|copp||top, summit, head|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuppaz||vault, round vessel, head}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gū-||to bend, curve}}. Cognate with {{etyl|dum|-}} {{term|koppe|lang=dum}}, {{term|kobbe||spider|lang=dum}}. More at {{l|en|cobweb}}.
+From {{etyl|enm|en}} {{term|coppe|lang=enm}}, from {{etyl|ang|en}} {{m|ang|*coppe}}, as in {{term|ātorcoppe||spider|lit=venom head|lang=ang}}, from {{etyl|ang|en}} {{term|copp||top, summit, head|lang=ang}}, from {{etyl|gem-pro|en}} {{m|gem-pro|*kuppaz||vault, round vessel, head}}, from {{etyl|ine-pro|en}} {{m|ine-pro|*gū-||to bend, curve}}. Cognate with {{etyl|dum|-}} {{term|koppe|lang=dum}}, {{term|kobbe||spider|lang=dum}}. More at {{l|en|cobweb}}.
 
 ====Noun====
 {{en-noun}}
