--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -518,6 +518,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 #* '''1784''', William Cowper, ''Tirocinium; or, A Review of Schools''
 #*: Boys are at best but pretty buds '''unblown''',
 #*: Whose scent and hues are rather guessed than known;
+#* {{quote-news|author=Mark Diacono|authorlink=Mark Diacono|title=How to grow and cook cauliflower, 2015's trendiest veg: Tricky to grow, boring to boil&nbsp;... so why is the outmoded cauliflower back at the culinary cutting edge? &#91;print version: Cauliflower power, 24 January 2015, p.&nbsp;G3&#93;|url=http://www.telegraph.co.uk/gardening/11362662/How-to-grow-and-cook-cauliflower-2015s-trendiest-veg.html|work={{w|The Daily Telegraph}} (Gardening)|date=26 January 2015|passage=[[w:Romanesco broccoli|Romanesco]] is slow to '''blow''' and more forgiving to grow than most cauliflowers, while being perhaps the most delicious and certainly the nuttiest-flavoured of the lot.}}
 
 =====Related terms=====
 * [[full-blown]]
