--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -30,6 +30,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Belarusian: {{t|be|піжа́ма|f|sc=Cyrl}}
 * Bengali: {{t|bn|পায়জামা|tr=paẏjama|sc=Beng}}
 * Bulgarian: {{t|bg|пижа́ма|f|sc=Cyrl}}
+* Burmese: {{t-needed|my}}
 * Catalan: {{t+|ca|pijama|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|睡衣|tr=shuìyī|sc=Hani}}
@@ -51,12 +52,13 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Indonesian: {{t+|id|piyama}}
 * Interlingua: {{t|ia|pajama}}
 * Italian: {{t+|it|pigiama|m}}
-{{trans-mid}}
 * Japanese: {{t|ja|パジャマ|tr=pajama}}, {{t|ja|寝間着|tr=ねまき, nemaki}}
+{{trans-mid}}
 * Kazakh: {{t+|kk|пижама|sc=Cyrl}}
 * Khmer: {{t|km|ឈុតគេង|tr=cʰut keeŋ|sc=Khmr}}
 * Korean: {{t+|ko|파자마|sc=Hang}}
 * Kyrgyz: {{t|ky|пижама|sc=Cyrl}}
+* Lao: {{t|lo|ສົ້ງເສື້ອນຸ່ງນອນ|sc=Laoo}}, {{t|lo|ເສຶ້ອນອນ|sc=Laoo}}, {{t|lo|ເສື້ອນອນ|sc=Laoo}}
 * Latvian: {{t|lv|pidžama|f}}
 * Lithuanian: {{t|lt|pižama|f}}
 * Macedonian: {{t|mk|пижа́ма|f}}
@@ -76,6 +78,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Spanish: {{t+|es|pijama}}, {{t|es|pijamas|n}}
 * Swedish: {{t+|sv|pyjamas|c}}
 * Tajik: {{t|tg|пижама|sc=Cyrl}}
+* Thai: {{t-needed|th}}
 * Turkish: {{t+|tr|pijama}}
 * Turkmen: {{t|tk|pijama}}
 * Ukrainian: {{t|uk|піжа́ма|f|sc=Cyrl}}
