--- a/en/p/pajamas.4756.wikitext
+++ b/en/p/pajamas.4756.wikitext
@@ -63,6 +63,7 @@ From {{etyl|ur|en}}/{{etyl|hi|en}} {{term|پایجامه|tr=pāyjāma|lang=ur}} 
 * Lithuanian: {{t|lt|pižama|f}}
 * Macedonian: {{t|mk|пижа́ма|f}}
 * Maltese: {{t|mt|paġama|f}}
+* Mongolian: {{t-needed|mn}}
 * Norwegian: {{t+|no|pysjamas|m}}
 * Persian: {{t|fa|پايجامه|tr=pâyjâme}}, {{t+|fa|پیژامه|tr=pižâme}}
 * Polish: {{t+|pl|piżama|f}}, {{t+|pl|pidżama|f}}
