I'm going to say that a synonymous word from the same etymological source, which has the same basic form as this word, is probably a simple alt form. other refs seem to agree. <mackle#32145389>

--- a/en/m/mackle.801840.wikitext
+++ b/en/m/mackle.801840.wikitext
@@ -6,15 +6,12 @@ From {{etyl|frm|en}} {{term|macule|lang=frm}}, from {{etyl|la|en}} {{term|macula
 ===Noun===
 {{en-noun}}
 
-# {{context|obsolete|lang=en}} A blurred or double [[impression]] in [[printing]].
-
-====Related terms====
-* [[macule]]
+# {{obsolete form of|macule|lang=en}}
 
 ===Verb===
 {{en-verb|mackl}}
 
-# {{context|obsolete|lang=en}} To blur, or be blurred, in printing, as if there were a double impression.
+# {{obsolete form of|macule|lang=en}}
 
 ===References===
 * {{R:Webster 1913}}
