--- a/en/m/mackle.801840.wikitext
+++ b/en/m/mackle.801840.wikitext
@@ -1,7 +1,7 @@
 ==English==
 
 ===Etymology===
-From the earlier form ''macle'', from {{m|en|macule}}, which see for more.
+From the earlier form {{m|en|macle}}, from {{m|en|macule}}, which see for more.
 
 ===Noun===
 {{en-noun}}
