--- a/en/t/thing.7362.wikitext
+++ b/en/t/thing.7362.wikitext
@@ -229,8 +229,9 @@ From {{etyl|enm|en}}, from {{etyl|ang|en}} {{term|þing|lang=ang||tr=thing}}, fr
 
 {{trans-top|that which matters; the crux}}
 * Asturian: {{t|ast|cosa|f}}
-* Finnish: {{t|fi|olennainen}} {{qualifier|adjective}}
+* Dutch: {{t+|nl|punt|n}}
 {{trans-mid}}
+* Finnish: {{t|fi|olennainen}} {{qualifier|adjective}}
 * German: {{t|de|Sache|f}}
 {{trans-bottom}}
 
