t+es:[[entonces]] ([[WT:EDIT|Assisted]]) <then#32153904>

--- a/en/t/then.7353.wikitext
+++ b/en/t/then.7353.wikitext
@@ -310,6 +310,7 @@ From {{etyl|enm|en}} {{term|then|then(ne)|lang=enm}}, {{term|than|than(ne)|lang=
 * Norwegian:
 *: Bokmål: {{t|nb|daværende}}
 *: Nynorsk: {{t|nn|dåværande}}
+* Spanish: {{t+|es|entonces}}
 * Swedish: {{t+|sv|dåvarande}}
 {{trans-bottom}}
 
