--- a/en/e/enumerate.34095.wikitext
+++ b/en/e/enumerate.34095.wikitext
@@ -41,6 +41,7 @@ From {{etyl|la|en}} {{m|la|enumerātus}} < {{m|la|enumerō}}.
 # {{feminine plural of|enumerato|lang=it}}
 
 [[Category:Italian past participle forms]]
+[[Category:en:Statistics]]
 
 ----
 
