/* English */ Translations <adhesively#32170397>

--- a/en/a/adhesively.855990.wikitext
+++ b/en/a/adhesively.855990.wikitext
@@ -6,8 +6,14 @@
 ===Adverb===
 {{en-adv}}
 
-# In a [[adhesive]] manner; by [[adhesion]].
+# In an [[adhesive]] manner; by [[adhesion]].
 #: ''The screw fastening was supplemented '''adhesively'''.''
+
+====Translations====
+{{trans-top|in an adhesive manner}}
+* Portuguese: {{t|pt|adesivamente}}
+{{trans-mid}}
+{{trans-bottom}}
 
 [[ko:adhesively]]
 [[io:adhesively]]
