--- a/en/g/gamble.34097.wikitext
+++ b/en/g/gamble.34097.wikitext
@@ -96,6 +96,7 @@ From {{etyl|ang|en}} [[gamenian]] 'to play', either via a dialectal survival of 
 * Hebrew: {{t+|he|הימר|tr=himér}}
 * Japanese: {{t+|ja|賭ける|tr=[[かける]], kakeru|sc=Jpan}}
 {{trans-mid}}
+* Khmer: {{t-needed|km}}
 * Macedonian: {{t|mk|се коцка|tr=se kócka}}
 * Malay: {{t|ms|judi}}
 * Maori: {{t|mi|purei moni}}
