--- a/en/b/bet.6795.wikitext
+++ b/en/b/bet.6795.wikitext
@@ -109,6 +109,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Italian: {{t|it|scommettere}}
 * Japanese: {{t+|ja|賭ける|tr=かける, kakeru}}
 * Jèrriais: {{t|roa-jer|gagi}}, {{t|roa-jer|pathier}}
+* Khmer: {{t-needed|km}}
 * Latvian: {{t|lv|derēt}}, {{t|lv|saderēt}}
 * Norwegian: {{t|no|vedde}}
 * Polish: {{t+|pl|postawić}}, {{t+|pl|zakładać się}}
@@ -118,6 +119,7 @@ From 16th century criminal slang, likely from {{term|abet|lang=en}} or {{etyl|an
 * Slovene: {{t|sl|staviti}}
 * Spanish: {{t+|es|apostar}}
 * Swedish: {{t|sv|slå vad}}
+* Thai: {{t-needed|th}}
 * Turkish: {{t-needed|tr}}
 {{trans-bottom}}
 
