--- a/en/n/Nintendo.775484.wikitext
+++ b/en/n/Nintendo.775484.wikitext
@@ -32,6 +32,7 @@ From [[w:Nintendo|Nintendo Company, Limited]] (任天堂株式会社), the Japan
 *: Mandarin: {{t+|cmn|任天堂|tr=Rèntiāntáng|sc=Hani}}
 * Finnish: {{t|fi|Nintendo}}
 * French: {{t+|fr|Nintendo|f}}
+* German: {{t|de|Nintendo|f}}
 {{trans-mid}}
 * Japanese: {{t|ja|任天堂|tr=Nintendō}}, {{t|ja|ニンテンドー|tr=Nintendō}},  {{t+|ja|ファミコン|tr=famikon}}
 * Russian: {{t|ru|Нинтендо|tr=Ninténdo}}
