--- a/en/s/squirrel.8243.wikitext
+++ b/en/s/squirrel.8243.wikitext
@@ -41,6 +41,7 @@ From {{etyl|fro|en}} {{m|fro|esquirel}}, {{m|fro|escurel}} (whence {{etyl|fr|-}}
 * Breton: {{t+|br|gwiñver|m}}, {{t|br|kaz-koad|m}}
 * Bulgarian: {{t+|bg|ка́терица|f}}
 * Catalan: {{t|ca|esquirol|m}}
+* Central Mazahua: {{t|maz|mijñi}}
 * Cherokee: {{t|chr|ᏌᎳᎵ|tr=salali|sc=Cher}}
 * Chinese:
 *: Mandarin: {{t+|cmn|松鼠|tr=sōngshǔ|sc=Hani}}, {{t+|cmn|灰鼠|tr=huīshǔ|sc=Hani}}, {{t+|cmn|栗鼠|tr=lìshǔ|sc=Hani}}
