--- a/en/a/adoptively.855992.wikitext
+++ b/en/a/adoptively.855992.wikitext
@@ -6,6 +6,12 @@
 # In a [[adoptive]] manner; by [[adoption]].
 #: ''The became grandparents '''adoptively'''.''
 
+====Translations====
+{{trans-top|by adoption}}
+* Portuguese: {{t|pt|adotivamente}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[ko:adoptively]]
 [[io:adoptively]]
 [[vi:adoptively]]
