--- a/en/p/Pax Americana.855982.wikitext
+++ b/en/p/Pax Americana.855982.wikitext
@@ -6,3 +6,13 @@ Latin.  By analogy with [[Pax Romana]].
 ===Proper noun===
 {{en-proper noun|head=[[Pax]] [[Americana]]}}
 # The period of relative peace in the Western world since the end of World War II in 1945, coinciding with the military and economic dominance of the United States.
+
+====Translations====
+{{trans-top}}
+* German: {{t-|de|Pax Americana}}
+* French: {{t+|fr|pax americana}}
+* Japanese: {{t-|ja|パクス・アメリカーナ|tr=pakusu amerikāna}}
+{{trans-mid}}
+* Korean: {{t-|ko|팍스 아메리카나|tr=pakseu amerikana}}
+* Spanish: {{t-|es|Pax Americana}}
+{{trans-bottom}}
