/* English */ Translations <adulterously#32189809>

--- a/en/a/adulterously.855996.wikitext
+++ b/en/a/adulterously.855996.wikitext
@@ -6,6 +6,12 @@
 # In a [[adulterous]] manner.
 #: ''She was a home-wrecker, taking her pleasure '''adulterously'''.''
 
+====Translations====
+{{trans-top|in a adulterous manner}}
+* Portuguese: {{t|pt|adulteramente}}
+{{trans-mid}}
+{{trans-bottom}}
+
 [[ca:adulterously]]
 [[ko:adulterously]]
 [[io:adulterously]]
