--- a/en/q/qua.4315.wikitext
+++ b/en/q/qua.4315.wikitext
@@ -30,6 +30,7 @@ From {{etyl|la|en}} {{term|qua||in the capacity of|lang=la}}.
 * Dutch: [[qua#Dutch|qua]], {{t|nl|als zodanig}}, {{t|nl|wat betreft}}
 {{trans-mid}}
 * French: {{t+|fr|en tant que}}
+* Greek: {{t+|el|ως|sc=Grek}}
 * Swedish: {{t|sv|i egenskap av}}
 {{trans-bottom}}
 
