t+lv:[[vodka]] ([[WT:EDIT|Assisted]]) <vodka#32203715>

--- a/en/v/vodka.34100.wikitext
+++ b/en/v/vodka.34100.wikitext
@@ -70,7 +70,7 @@ The standard of identity is from the [[s:Code of Federal Regulations|Code of Fed
 {{trans-mid}}
 * Latgalian: {{t|ltg|braņdīņs}}
 * Latin: {{t|la|vodca|f}}
-* Latvian: {{t|lv|degvīns|m}}, {{t|lv|šņabis|m}}
+* Latvian: {{t|lv|degvīns|m}}, {{t|lv|šņabis|m}}, {{t+|lv|vodka|f}}
 * Lithuanian: {{t|lt|degtinė|f}}, {{t|lt|vodka|f}}
 * Luxembourgish: {{t|lb|Wodka}}
 * Macedonian: {{t|mk|во́тка|f}}
