--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -217,7 +217,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Chinese:
 *: Mandarin: {{t+|cmn|吹口哨|tr=chuī kǒushào|sc=Hani}}, {{t+|cmn|鳴笛|sc=Hani}}, {{t+|cmn|鸣笛|tr=míngdí|sc=Hani}}
 * Crimean Tatar: {{t|crh|sızğırmaq}}
-* Czech: {{t|cs|pískat}}
+* Czech: {{t|cs|pískat|impf}}
 * Dalmatian: {{t|dlm|sublar}}
 * Danish: {{t+|da|fløjte}}, {{t|da|hvisle}}
 * Dutch: {{t+|nl|fluiten}}
@@ -239,7 +239,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Latvian: {{t+|lv|svilpt}}
 * Macedonian: {{t+|mk|&lt;strong class="error"&gt;&lt;span class="scribunto-error" id="mw-scribunto-error-1"&gt;Lua error in Module:languages/templates at line 28: The language code 'nk' is not valid.&lt;/span&gt;&lt;/strong&gt|impf|alt=свири|sc=Cyrl}}
 * Occitan: {{t+|oc|siblar}}, {{t+|oc|fiular}}
-* Polish: {{t+|pl|gwizdać}}, {{t|pl|świstać}}
+* Polish: {{t+|pl|gwizdać|impf}}, {{t|pl|świstać|impf}}
 * Portuguese: {{t+|pt|assobiar}} {{qualifier|with one’s mouth}}, {{t+|pt|assoviar}} {{qualifier|with one’s mouth}}, {{t|pt|apitar}} {{qualifier|with a whistle}}
 * Romanian: {{t+|ro|fluiera}}, {{t+|ro|șuiera}}
 * Romansch: {{t|rm|tschivlar}}, {{t|rm|schular}}, {{t|rm|tgular}}, {{t|rm|schivlar}}, {{t|rm|tschüvler}}, {{t|rm|tschüblar}}
