--- a/en/w/whistle.7360.wikitext
+++ b/en/w/whistle.7360.wikitext
@@ -52,7 +52,7 @@ From {{etyl|enm|en}} {{term|whistlen|lang=enm}}; {{etyl|ang|en}} {{term|hwistlan
 * Azeri: {{t|az|fit}}
 * Belarusian: {{t|be|свісто́к|m|sc=Cyrl}}
 * Breton: {{t+|br|c'hwitell|f}}, {{t+|br|c'hwitelloù|p}}
-* Bulgarian: {{t+|bg|сви́рка|f|sc=Cyrl}}
+* Bulgarian: {{t+|bg|свирка|f|sc=Cyrl}}
 * Catalan: {{t+|ca|xiulet|m}}
 * Chinese:
 *: Mandarin: {{t+|cmn|哨子|tr=shàozi|sc=Hani}}, {{t+|cmn|口哨|tr=kǒushào|sc=Hani}}, {{t+|cmn|口笛|tr=kǒudí|sc=Hani}}, {{t+|cmn|汽笛|tr=qìdí|sc=Hani}} {{qualifier|steam whistle}}
