--- a/en/p/PTO.26209.wikitext
+++ b/en/p/PTO.26209.wikitext
@@ -24,6 +24,7 @@
 * Dutch: {{t|nl|z.o.z.}}
 {{trans-mid}}
 * French: {{t+|fr|TSVP}}
+* Hungarian: {{t+|hu|˙/.}}
 {{trans-bottom}}
 
 {{trans-top|Powered shaft for driving auxiliary equipment}}
