--- a/en/m/multicolor.34078.wikitext
+++ b/en/m/multicolor.34078.wikitext
@@ -2,7 +2,7 @@
 
 ===Alternative forms===
 * [[multicolour]] {{qualifier|Commonwealth}}
-* [[multicolored]] {{qualifier|US}}, [[multicoloured]] {{qualifier|Commonwealth}}
+
 
 ===Etymology===
 From {{etyl|la|en}} {{term|multicolor|lang=la}}; see below.
@@ -14,6 +14,9 @@ From {{etyl|la|en}} {{term|multicolor|lang=la}}; see below.
 {{head|en|adjective}}
 
 # Having, resembling, or pertaining to many [[color]]s.
+
+====Synonyms====
+* ''see'' '''[[multicolored]]''' {{qualifier|US}} / [[multicoloured]] {{qualifier|Commonwealth}}
 
 ====Translations====
 {{trans-top|having many colors}}
