--- a/en/b/Balkans.741828.wikitext
+++ b/en/b/Balkans.741828.wikitext
@@ -35,10 +35,10 @@ Used with the definite article {{term|the}}.
 ====Translations====
 {{trans-top-also|geographical region in the southeast of Europe|Balkan Peninsula}}
 * Albanian: {{t-needed|sq}}
-* Ancient Greek: {{t|grc|Χερσόνησος τοῦ Αἵμου|m|tr=Khersonēsos tou Aimou|sc=polytonic}}
-* Armenian: {{t|hy|Բալկաններ|tr=Balkanner}}
+* Ancient Greek: {{t|grc|Χερσόνησος τοῦ Αἵμου|m|sc=polytonic}}
+* Armenian: {{t|hy|Բալկաններ}}
 * Asturian: {{t|ast|Balcanes|m}}
-* Bulgarian: {{t|bg|Балкани|p|tr=Balkani|sc=Cyrl}}
+* Bulgarian: {{t|bg|Балкани|p|sc=Cyrl}}
 * Catalan: {{t|ca|Balcans|m-p}}
 * Chinese:
 *: Mandarin: {{t|cmn|巴爾幹|sc=Hani}}, {{t+|cmn|巴尔干|tr=Bā'ěrgàn|sc=Hani}}, {{t+|cmn|巴爾幹半島|sc=Hani}}, {{t|cmn|巴尔干半岛|tr=Bā'ěrgàn bàndǎo|sc=Hani}}
@@ -48,17 +48,18 @@ Used with the definite article {{term|the}}.
 * French: {{t+|fr|Balkans|m}}
 * German: {{t+|de|Balkan|m}}
 {{trans-mid}}
-* Greek: {{t+|el|Βαλκάνια|n-p|tr=Valkánia}}
+* Greek: {{t+|el|Βαλκάνια|n-p}}
 * Hungarian: {{t+|hu|Balkán}}
 * Japanese: {{t|ja|バルカン半島|tr=[[Barukan hantō]]|sc=Jpan}}
-* Macedonian: {{t|mk|Балкан|m|tr=Bálkan}}
+* Macedonian: {{t|mk|Балкан|m}}
 * Polish: {{t+|pl|Bałkany}}
 * Portuguese: {{t|pt|Balcãs|m-p}}, {{t|pt|Bálcãs|m-p}}
 * Romanian: {{t|ro|Balcani|m-p}}, {{t|ro|Peninsula Balcanică|f}}
-* Russian: {{t+|ru|Балканы|m-p|tr=Balkány}}
+* Russian: {{t+|ru|Балка́ны|m-p}}
 * Serbo-Croatian:
 *: Cyrillic: {{t|sh|Балкан|m|sc=Cyrl}}
 *: Roman: {{t|sh|Balkan|m|sc=Latn}}
+* Slovak: {{t|sk|Balkán|m}}
 * Slovene: {{t|sl|Balkán|m}}
 * Swedish: {{t+|sv|Balkan}}
 * Turkish: {{t+|tr|Balkanlar|p}}
