--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -19,7 +19,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 
 # Any of several [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
 #: ''The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.''
-# (''specifically'') A young swine, a [[piglet]].
+# (''specifically'') A young swine, a [[piglet]]. {{rfex}}
 # {{context|uncountable|lang=en}} The [[edible]] [[meat]] of such an animal; [[pork]].
 #: ''Some religions prohibit their adherents from eating '''pig'''.''
 # Someone who overeats or eats rapidly and noisily.
