--- a/en/p/pig.8244.wikitext
+++ b/en/p/pig.8244.wikitext
@@ -19,7 +19,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 
 # Any of several [[mammalian]] species of the genus ''[[Sus]]'', having [[cloven]] [[hooves]], [[bristle]]s and a [[nose]] adapted for [[digging]]; especially the [[domesticated]] [[farm]] [[animal]] ''[[Sus scrofa]]''.
 #: ''The farmer kept a pen with two '''pigs''' that he fed from table scraps and field waste.''
-# (''specifically'') A young swine, a [[piglet]]. {{rfex}}
+# {{lb|en|specifically}} A young swine, a [[piglet]]. {{rfex}}<!--maybe it's used this way by people who call adult pigs "hogs"?-->
 # {{context|uncountable|lang=en}} The [[edible]] [[meat]] of such an animal; [[pork]].
 #: ''Some religions prohibit their adherents from eating '''pig'''.''
 # Someone who overeats or eats rapidly and noisily.
@@ -28,7 +28,7 @@ British slang sense "police officer" from at least 1785.<ref>'''2003''', Victori
 #: ''She considered him a '''pig''' as he invariably stared at her bosom when they talked.''
 # A [[dirty]] or [[slovenly]] person.
 #: ''He was a '''pig''' and his apartment a pigpen; take-away containers and pizza boxes in a long, moldy stream lined his counter tops.''
-# {{context|now|_|chiefly|US|UK|Australia|derogatory|slang|lang=en}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
+# {{lb|en|now|chiefly|US|UK|Australia|derogatory|slang}} A [[police officer]]. {{defdate|From ''ante'' 1785.}}
 #: ''The protester shouted, “Don't give in to the '''pigs'''!” as he was arrested.''
 #* '''1989''', [[w:Dan Simmons|Dan Simmons]], ''{{w|Carrion Comfort}}'', [http://books.google.com.au/books?id=ClXFYXTcrXUC&pg=PA359&dq=%22pig%22|%22pigs%22+police+-intitle:%22%22+-inauthor:%22%22&hl=en&sa=X&ei=6jLXT4-XMsHYigfxvJS4Aw&redir_esc=y#v=onepage&q=%22pig%22|%22pigs%22%20police%20-intitle%3A%22%22%20-inauthor%3A%22%22&f=false page 359],
 #*: “...Sounds too easy,” Marvin was saying. “What about the '''pigs'''?”
