t+id:[[tiup]] t+su:[[tiup]] ([[WT:EDIT|Assisted]]) <blow#32224155>

--- a/en/b/blow.6803.wikitext
+++ b/en/b/blow.6803.wikitext
@@ -152,6 +152,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Greek: {{t+|el|φυσώ|tr=fiso}}
 *: Ancient: {{t|grc|ἄημι|tr=aēmi|sc=polytonic}}
 * Hungarian: {{t+|hu|fúj}}
+* Indonesian: {{t+|id|tiup}}
 * Irish: {{t|ga|séid}}
 * Italian: {{t+|it|soffiare}}
 * Japanese: {{t|ja|吹く|tr=[[ふく]], fuku|sc=Jpan}}
@@ -183,6 +184,7 @@ From {{etyl|enm|en}} {{term|blowen|lang=enm}}, from {{etyl|ang|en}} {{m|ang|blā
 * Sorbian:
 *: Lower Sorbian: {{t|dsb|duś|impf}}, {{t|dsb|dunuś|pf}}
 * Spanish: {{t+|es|soplar}}
+* Sundanese: {{t|su|tiup}}
 * Swedish: {{t+|sv|blåsa}}
 * Turkish: {{t+|tr|üflemek}}, {{t+|tr|esmek}}
 * Ukrainian: {{t|uk|дути|tr=dúty|sc=Cyrl}}, {{t|uk|віяти|tr=víjaty|sc=Cyrl}}
