t+nl:[[aan de kook]] ([[WT:EDIT|Assisted]]) <aboil#32226265>

--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -16,6 +16,7 @@
 
 ====Translations====
 {{trans-top|boiling}}
+* Dutch: {{t|nl|aan de kook}}
 * Finnish: {{t+|fi|kiehua|alt=kiehumassa}}
 {{trans-mid}}
 * Portuguese: {{t+|pt|fervente}}
