t+nl:[[in alle staten]] ([[WT:EDIT|Assisted]]) <aboil#32226272>

--- a/en/a/aboil.855995.wikitext
+++ b/en/a/aboil.855995.wikitext
@@ -23,7 +23,7 @@
 {{trans-bottom}}
 
 {{trans-top|excited}}
-* Dutch: {{t+|nl|opgewonden}}
+* Dutch: {{t+|nl|opgewonden}}, {{t|nl|in alle staten}}
 * Finnish: {{t+|fi|kuuma|alt=kuumana}}
 {{trans-mid}}
 {{trans-bottom}}
