new Finnish section <mundo#32233532>

--- a/en/m/mundo.4430.wikitext
+++ b/en/m/mundo.4430.wikitext
@@ -10,6 +10,21 @@ From {{etyl|la|an}} {{term|mundus|lang=la}}.
 
 ----
 
+==Finnish==
+
+===Noun===
+{{fi-noun}}
+
+# {{label|fi|slang}} ecstasy {{gloss|drug}}
+
+====Translations====
+{{fi-decl-valo|mund|||o|a}}
+
+====Synonyms====
+* [[ekstaasi]]
+
+----
+
 ==Galician==
 
 ===Etymology===
