/* Related terms */ <minimum#32235259>

--- a/en/m/minimum.34064.wikitext
+++ b/en/m/minimum.34064.wikitext
@@ -42,7 +42,8 @@ From {{etyl|la|en}} {{term|minimus||lang=la|least, smallest}}
 {{rel-bottom}}
 
 ====Related terms====
-* [[minimize]]
+* [[minimal]]
+* [[minimize]], [[minimise]]
 
 ====Translations====
 {{trans-top|lowest limit}}
