removed [[Category:en:Rodents]]; added [[Category:en:Squirrels]] using [[Help:Gadget-HotCat|HotCat]] <marmot#32236248>

--- a/en/m/marmot.8229.wikitext
+++ b/en/m/marmot.8229.wikitext
@@ -103,7 +103,7 @@ From {{etyl|frm|en}} ''marmote'', from {{etyl|fro|en}} ''marmotaine, marmontaine
 * [[groundhog]]
 * [[woodchuck]]
 
-[[Category:en:Rodents]]
+[[Category:en:Squirrels]]
 
 ----
 
