t+de:[[beugen]] ([[WT:EDIT|Assisted]]) <bend#32253599>

--- a/en/b/bend.6792.wikitext
+++ b/en/b/bend.6792.wikitext
@@ -217,6 +217,7 @@ From {{etyl|enm|en}} {{term|benden|lang=enm}}, from {{etyl|ang|en}} {{term|benda
 * Dutch: {{t+|nl|buigen}}
 * Finnish: {{t|fi|taivuttaa}}
 {{trans-mid}}
+* German: {{t+|de|beugen}}
 * Swahili: {{t+|sw|pinda}}
 {{trans-bottom}}
 
