separate etymologies; the trade pidgin suffix is obviously not from Latin <-um#32260807>

--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -1,27 +1,21 @@
 {{also|Appendix:Variations of "um"}}
 ==English==
-
-===Etymology===
-From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative]], [[accusative]], and [[vocative]] forms of numerous [[Appendix:Latin second declension#Neuter|neuter]] {{etyl|la|en}} [[Appendix:Latin second declension#Neuter|second declension]] nouns.
-
 ===Pronunciation===
 * {{a|UK}} {{IPA|/əm/|lang=en}}
 
-===Suffix===
+===Etymology 1===
+From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative]], [[accusative]], and [[vocative]] forms of numerous [[Appendix:Latin second declension#Neuter|neuter]] {{etyl|la|en}} [[Appendix:Latin second declension#Neuter|second declension]] nouns.
+
+====Suffix====
 {{head|en|suffix|plural|-a}}
 
 # {{non-gloss definition|Denotes [[singular]] [[grammatical]] [[number]].}}
 # {{context|chemistry|lang=en}} Forms the ends of the names of certain [[element]]s (such as [[molybdenum]] and [[platinum]]).
-# Denotes transitive verbs in the trade pidgins used between English-speakers and indigenous populations; used derogatorily by extension in English by addition to any verb, transitive or not.
-#* '''1896''', F J Stimsom, ''King Noanett: A Story of Old Virginia and the Massachusetts Bay'', p. 254:
-#*:"Giv'''um''' dinner; smok'''um''' pipe," was all that we could get out of Quatchett.
-#* '''1871''' Mrs. Edward Millett, ''An Australian parsonage; or, The settler and the savage in Western Australia'', p. 129:
-#*: Having finished her return of deaths, she went on to say "Black fellow sick—white lady fowl send'''um'''—white lady kangaroo send'''um'''—master all self eat'''um'''—" but here she paused and made an exception in favour of the matron, expressed by the words " Missis not eat'''um'''—missis good fellow."
 
-====Usage notes====
+=====Usage notes=====
 * The vast majority of words which feature this suffix also have standard ''-ums'' plurals formed by suffixation with the {{term|-s|lang=en}} plural suffix. However, in such situations, the {{term||-s|lang=en}} suffix morphologically is additional to and separate from the {{term||-um|lang=en}} suffix.
 
-====See also====
+=====See also=====
 {{rel-top5|See also}}
 * [[-a]]
 {{rel-mid5}}
@@ -34,7 +28,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[-us]]
 {{rel-bottom}}
 
-====Derived terms====
+=====Derived terms=====
 {{rel-top4|Terms which feature the ''-um'' suffix}}
 * [[criterium]]
 * [[datum]]
@@ -78,7 +72,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * [[valium]]
 {{rel-bottom|note=: This list is very much incomplete; please help its completion by adding terms.}}
 
-====Translations====
+=====Translations=====
 {{trans-top|Latinate singular grammatical number suffix}}
 * Dutch: {{t+|nl|-um}}
 * French: {{t+|fr|-um}}
@@ -90,6 +84,16 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 * Portuguese: {{t+|pt|-o}}
 * Spanish: {{t+|es|-o}}
 {{trans-bottom}}
+
+===Etymology 2===
+Possibly from [['em]].
+
+====Suffix====
+# Denotes transitive verbs in the trade pidgins used between English-speakers and indigenous populations; used derogatorily by extension in English by addition to any verb, transitive or not.
+#* '''1871''', Mrs. Edward Millett, ''An Australian parsonage; or, The settler and the savage in Western Australia'', p. 129:
+#*: Having finished her return of deaths, she went on to say "Black fellow sick—white lady fowl send'''um'''—white lady kangaroo send'''um'''—master all self eat'''um'''—" but here she paused and made an exception in favour of the matron, expressed by the words " Missis not eat'''um'''—missis good fellow."
+#* '''1896''', F J Stimsom, ''King Noanett: A Story of Old Virginia and the Massachusetts Bay'', p. 254:
+#*:"Giv'''um''' dinner; smok'''um''' pipe," was all that we could get out of Quatchett.
 
 ----
 ==Bislama==
