/* Suffix */ head <-um#32260809>

--- a/en/-/-um.34068.wikitext
+++ b/en/-/-um.34068.wikitext
@@ -89,6 +89,7 @@ From the [[homographic]] [[w:Grammatical case|case]] endings of the [[nominative
 Possibly from [['em]].
 
 ====Suffix====
+{{en-suffix}}
 # Denotes transitive verbs in the trade pidgins used between English-speakers and indigenous populations; used derogatorily by extension in English by addition to any verb, transitive or not.
 #* '''1871''', Mrs. Edward Millett, ''An Australian parsonage; or, The settler and the savage in Western Australia'', p. 129:
 #*: Having finished her return of deaths, she went on to say "Black fellow sick—white lady fowl send'''um'''—white lady kangaroo send'''um'''—master all self eat'''um'''—" but here she paused and made an exception in favour of the matron, expressed by the words " Missis not eat'''um'''—missis good fellow."
@@ -96,6 +97,7 @@ Possibly from [['em]].
 #*:"Giv'''um''' dinner; smok'''um''' pipe," was all that we could get out of Quatchett.
 
 ----
+
 ==Bislama==
 
 ===Alternative forms===
