t+cs:[[chopit se]] ([[WT:EDIT|Assisted]]) <seize#32272030>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -81,6 +81,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 * Volapük: {{t+|vo|gleipön}}
 {{trans-bottom}}
 {{trans-top|take advantage}}
+* Czech: {{t|cs|chopit se|pf}}
 * Danish: {{t|da|gribe}}
 * Dutch: {{t+|nl|grijpen}}, {{t+|nl|aangrijpen}}
 * Finnish: {{t+|fi|tarttua}} {{t+|fi|tilaisuus|alt=tilaisuuteen}}
