t+cs:[[mít záchvat]] t+cs:[[dostat záchvat]] ([[WT:EDIT|Assisted]]) <seize#32272033>

--- a/en/s/seize.26061.wikitext
+++ b/en/s/seize.26061.wikitext
@@ -104,6 +104,7 @@ Earlier {{term|seise|lang=en}}, from {{etyl|enm|en}} {{term|seisen|lang=enm}}, {
 {{trans-bottom}}
 {{trans-top|to have a seizure}}
 {{trans-mid}}
+* Czech: {{t|cs|mít záchvat|impf}}, {{t|cs|dostat záchvat|pf}}
 * Portuguese: {{t+|pt|convulsionar}}, {{t+|pt|convulsionar-se}}, {{t+|pt|convulsar}}, {{t+|pt|convelir}},
 {{trans-bottom}}
 
