t+ka:[[ონდატრა]] ([[WT:EDIT|Assisted]]) <muskrat#32276240>

--- a/en/m/muskrat.8239.wikitext
+++ b/en/m/muskrat.8239.wikitext
@@ -47,6 +47,7 @@ Perhaps so called for its [[musky]] [[odour]] and because it resembles a {{m|en|
 * Finnish: {{t+|fi|piisami}}, {{t|fi|piisamirotta}}, {{t|fi|myskirotta}}
 * French: {{t+|fr|rat musqué|m}}
 * Galician: {{t+|gl|aguaneira}}
+* Georgian: {{t|ka|ონდატრა|sc=Geor}}
 * German: {{t+|de|Bisamratte|f}}
 * Greek: {{t|el|μοσχοπόντικας}}
 * Gujarati: {{t-needed|gu}}
