--- a/en/q/quatorze.26056.wikitext
+++ b/en/q/quatorze.26056.wikitext
@@ -36,36 +36,19 @@ From {{etyl|la|fr}} {{term|quattuordecim|lang=la}}.
 
 ----
 
-==Guernésiais==
-{{cardinalbox|roa-grn|13|14|15|treize|tchinze}}
-
-===Etymology===
-From {{etyl|fro|roa-grn}} {{term|quatorze|lang=fro}}, from {{etyl|la|roa-grn}} {{term|quattuordecim|lang=la}}.
-
-===Numeral===
-{{head|roa-grn|numeral}}
-
-# [[fourteen]]
-
-[[Category:Guernésiais cardinal numbers]]
-
-----
-
 ==Jèrriais==
-{{cardinalbox|roa-jer|13|14|15|treize|tchînze}}
-
+{{cardinalbox|nrf|13|14|15|treize|tchinze}}
+{{cardinalbox|nrf|13|14|15|treize|tchînze}}
 ===Etymology===
-From {{etyl|fro|roa-jer}} {{term|quatorze|lang=fro}}, from {{etyl|la|roa-jer}} {{term|quattuordecim|lang=la}}.
+From {{etyl|fro|nrf}} {{m|fro|quatorze}}, from {{etyl|la|nrf}} {{m|la|quattuordecim}}.
 
 ===Pronunciation===
-* {{audio|Jer-quatorze.ogg|Audio}}
+* {{audio|Jer-quatorze.ogg|Audio (Jersey)|lang=nrf}}
 
 ===Numeral===
-{{head|roa-jer|numeral}}
+{{head|nrf|numeral}}
 
-# [[fourteen]]
-
-[[Category:Jèrriais cardinal numbers]]
+# {{label|nrf|Jersey|Guernsey|cardinal}} [[fourteen]]
 
 ----
 
